# Mongo-mongo

./: conect.py  config.ini  load_json_to_db.py  main.py  models.py  pyproject.toml  reed.py  seeds.py
sending_emails/: consumer.py  models.py  produser.py
